Extensibility: custom writers now can be configurated in App.config

--- a/src/Qoollo.Logger.AppConfigProject/Qoollo.Logger.AppConfigProject.csproj
+++ b/src/Qoollo.Logger.AppConfigProject/Qoollo.Logger.AppConfigProject.csproj
@@ -56,7 +56,10 @@
     <Compile Include="OldFormat\WriteErrorValidator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="NewFormat\AppConfigLoaderGenerator.ttcode" />
+    <None Include="NewFormat\AppConfigLoaderGenerator.ttcode">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>AppConfigLoaderGenerator.txt</LastGenOutput>
+    </None>
     <None Include="NewFormat\Helpers\ConfigCommonData.ttinclude" />
     <None Include="NewFormat\Helpers\ConfigLoaderGenerator.ttinclude" />
     <None Include="NewFormat\Helpers\ConfigSampleFileGenerator.ttinclude" />
