--- a/src/Qoollo.Logger/Qoollo.Logger.csproj
+++ b/src/Qoollo.Logger/Qoollo.Logger.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Helpers\LocalMachineInfo.cs" />
     <Compile Include="LoggerDefault.cs" />
     <Compile Include="Net\InernalStableLoggerNetClient.cs" />
+    <Compile Include="Writers\DisposeReason.cs" />
     <Compile Include="Writers\Wrappers\Helpers\QueueAsyncProcessing\QueueAsyncProcessor.cs">
       <SubType>Code</SubType>
     </Compile>
