--- a/src/Qoollo.Logger.Test/App.config
+++ b/src/Qoollo.Logger.Test/App.config
@@ -5,9 +5,10 @@
   </configSections>
 
   <LoggerConfigurationSection xmlns="Qoollo.Logger.Configuration.LoggerConfigurationSection_NS">
-    <logger logLevel="DEBUG">
-      <asyncReliableQueueWrapper>
+    <logger logLevel="TRACE">
+      <asyncReliableQueueWrapper maxQueueSize="50000" isDiscardExcess="false">
         <groupWrapper>
+          <fileWriter logLevel="TRACE" fileNameTemplate="logs/all.log" template="x" />
           <fileWriter fileNameTemplate="logs/{Level}-{DateTime, format = yyyy-MM-dd hh-mm-ss}.log" />
           <fileWriter fileNameTemplate="logs/Error_{DateTime, format = yyyy-MM-dd}.log" logLevel="ERROR"/>
           <networkWriter serverAddress="127.0.0.1" port="7777" />
