StackSourceHead, StackSourceTail substitution tokens

--- a/src/Qoollo.Logger.Test/App.config
+++ b/src/Qoollo.Logger.Test/App.config
@@ -8,7 +8,7 @@
     <logger logLevel="TRACE">
       <asyncReliableQueueWrapper maxQueueSize="50000" isDiscardExcess="false">
         <groupWrapper>
-          <fileWriter logLevel="TRACE" fileNameTemplate="logs/all.log" template="x" />
+          <fileWriter logLevel="TRACE" fileNameTemplate="logs/all_{StackSourceHead}.log" template="x" />
           <fileWriter fileNameTemplate="logs/{Level}-{DateTime, format = yyyy-MM-dd hh-mm-ss}.log" />
           <fileWriter fileNameTemplate="logs/Error_{DateTime, format = yyyy-MM-dd}.log" logLevel="ERROR"/>
           <networkWriter serverAddress="127.0.0.1" port="7777" />
