--- a/src/Qoollo.Logger/Qoollo.Logger.csproj
+++ b/src/Qoollo.Logger/Qoollo.Logger.csproj
@@ -220,6 +220,7 @@
     <Compile Include="LoggerDefault.cs" />
     <Compile Include="Net\InernalStableLoggerNetClient.cs" />
     <Compile Include="Writers\DisposeReason.cs" />
+    <Compile Include="Writers\RealWriters\TcpWriter.cs" />
     <Compile Include="Writers\Wrappers\Helpers\QueueAsyncProcessing\QueueAsyncProcessor.cs">
       <SubType>Code</SubType>
     </Compile>
