--- a/src/Qoollo.Logger/Qoollo.Logger.csproj
+++ b/src/Qoollo.Logger/Qoollo.Logger.csproj
@@ -221,9 +221,7 @@
     <Compile Include="Net\InernalStableLoggerNetClient.cs" />
     <Compile Include="Writers\DisposeReason.cs" />
     <Compile Include="Writers\RealWriters\Helpers\TcpHelper.cs" />
-    <Compile Include="Writers\RealWriters\TcpWriter.cs">
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Writers\RealWriters\LogstashWriter.cs" />
     <Compile Include="Writers\Wrappers\Helpers\QueueAsyncProcessing\QueueAsyncProcessor.cs">
       <SubType>Code</SubType>
     </Compile>
