--- a/src/Qoollo.Logger.AppConfigProject/Qoollo.Logger.AppConfigProject.csproj
+++ b/src/Qoollo.Logger.AppConfigProject/Qoollo.Logger.AppConfigProject.csproj
@@ -56,7 +56,6 @@
     <Compile Include="OldFormat\WriteErrorValidator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="NewFormat\AppConfigLoaderGenerator.ttcode" />
     <None Include="NewFormat\Helpers\ConfigCommonData.ttinclude" />
     <None Include="NewFormat\Helpers\ConfigLoaderGenerator.ttinclude" />
     <None Include="NewFormat\Helpers\ConfigSampleFileGenerator.ttinclude" />
@@ -82,6 +81,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="NewFormat\AppConfigLoaderGenerator.ttcode">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>AppConfigLoaderGenerator1.txt</LastGenOutput>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
