--- a/src/Qoollo.Logger.Test/App.config
+++ b/src/Qoollo.Logger.Test/App.config
@@ -13,6 +13,7 @@
           <fileWriter fileNameTemplate="logs/Error_{DateTime, format = yyyy-MM-dd}.log" logLevel="ERROR"/>
           <networkWriter serverAddress="127.0.0.1" port="7777" />
           <consoleWriter logLevel="DEBUG" />
+          <logstashWriter logLevel="DEBUG" serverAddress="10.5.6.148" port="5001" />
           <patternMatchingWrapper pattern="{Level}">
             <match value="WARN">
               <fileWriter fileNameTemplate="logs/WarnOnly_{DateTime, format = yyyy-MM-dd}.log"/>
