--- a/src/Qoollo.Logger/Qoollo.Logger.csproj
+++ b/src/Qoollo.Logger/Qoollo.Logger.csproj
@@ -218,6 +218,13 @@
     <Compile Include="Helpers\ErrorTimeTracker.cs" />
     <Compile Include="Helpers\LocalMachineInfo.cs" />
     <Compile Include="LoggerDefault.cs" />
+    <Compile Include="LoggerImplementation\LoggerStaticGen.cs">
+      <DependentUpon>LoggerStaticGen.tt</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
+    <Compile Include="LoggerImplementation\LoggerStatic.cs" />
+    <Compile Include="LoggerStatic.cs" />
     <Compile Include="Net\InernalStableLoggerNetClient.cs" />
     <Compile Include="Writers\DisposeReason.cs" />
     <Compile Include="Writers\RealWriters\Helpers\TcpHelper.cs" />
@@ -301,7 +308,12 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="LoggerImplementation\LoggerStaticGen.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LoggerStaticGen.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
