--- a/src/Qoollo.Logger/Qoollo.Logger.csproj
+++ b/src/Qoollo.Logger/Qoollo.Logger.csproj
@@ -228,6 +228,7 @@
     <Compile Include="LoggerStatic.cs" />
     <Compile Include="Net\InernalStableLoggerNetClient.cs" />
     <Compile Include="Writers\DisposeReason.cs" />
+    <Compile Include="Writers\RealWriters\Helpers\JsonSimpleWriter.cs" />
     <Compile Include="Writers\RealWriters\Helpers\TcpHelper.cs" />
     <Compile Include="Writers\RealWriters\LogstashWriter.cs" />
     <Compile Include="Writers\Wrappers\Helpers\QueueAsyncProcessing\QueueAsyncProcessor.cs">
